salesforce/9.8/modules/ROOT/pages/salesforce-connector-studio.adoc
= Salesforce Studio Configuration - Mule 4
:page-aliases: connectors::salesforce/salesforce-connector-studio.adoc

To configure a connector in Anypoint Studio follow this process:

. Add the Salesforce connector to your project.
. Configure the Salesforce connector.
. Configure an input source.

== Add the Connector to a Studio Project

Anypoint Studio provides two ways to add the connector to your Studio project: from the Exchange button in the Studio taskbar or from the Mule Palette view.

=== Add the Connector Using Exchange

. In Studio, create a Mule project.
. Click the Exchange icon *(X)* in the upper-left of the Studio task bar.
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for "Salesforce".
. Select the connector and click *Add to project*.
. Follow the prompts to install the connector.

=== Add the Connector in Studio

. In Studio, create a Mule project.
. In the Mule Palette view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type "Salesforce" in the search field.
. Click this connector's name in *Available modules*.
. Click *Add*.
. Click *Finish*.

== Configure Salesforce

. Drag a connector operation to the Studio canvas.
+
To use the Salesforce connector as a message processor, drag one of these operations to the Source area of a flow:
+
** *On Deleted Object* - Initiate your app when a Salesforce user deletes an object. Possible object types are `Contact`, `Lead`, `Account`, `Contracts`, `Opportunity`, or the name of a custom object.
** *On Modified Object* - Initiate your app when a Salesforce user modifies an object. Possible object types are `Contact`, `Lead`, `Account`, `Contracts`, `Opportunity`, or the name of a custom object.
** *On New Object* - Initiate your app when a Salesforce user creates a new object. Possible object types are `Contact`, `Lead`, `Account`, `Contracts`, `Opportunity`, or the name of a custom object.
** *Replay channel* - Subscribe to a streaming channel. This trigger provides channel-related notification settings for new events and events stored by Salesforce within the 24-hour retention period. Events that take place in the specified channel trigger the flow.
+
NOTE: A channel or topic must be published to Salesforce before a subscription to the channel can be created.
+
** *Replay topic* - Subscribe to a topic. This trigger provides topic-related notification settings for new events and events stored by Salesforce within the 24-hour retention period. Events that take place on records in the specified topic trigger the flow.
** *Subscribe channel* - Subscribe to a streaming channel. This trigger provides channel-related notification settings for new events that take place after you subscribe.
** *Subscribe topic* - Subscribe to a topic. This trigger provides topic-related notification settings for new events that take place after you subscribe.
+
IMPORTANT: For the *On New Object* and *On Modified Object* operations, specify a UTC value in the *Since* field. If the server is in a different time zone, you must specify a value for the *Since* field; if the *Since* field is left empty, the connector takes the local timestamp. As servers are in datacenters located generally elsewhere from one's location, use of the *Since* field is recommended.
+
. Click the operation.
. Click the green plus sign to the right of *Connector Configuration*.
. In the Connection field choose one of the following connection types:
+
** <<Basic Username Password>>
** <<OAuth 2.0>>
** <<OAuth JWT>>
** <<OAuth SAML>>
** <<OAuth Username Password>>
+
. For each of the connection choices, you can set optional proxy values:
+
** *Host* - Host name of the proxy server.
** *Port* - The port number the proxy server runs on.
** *Username* - The username to log in to the server.
** *Password* - The corresponding password.

After setting the *Global Element Properties* screen, return to the main connector menu and set the <<Connector Property Values>>.

== Basic Username Password

Important fields:

* *Username* (required): Enter the Salesforce username.
* *Password* (required): Enter the corresponding password.
* *Security token*: Enter the corresponding security token.

== OAuth 2.0

Important fields:

* *Display* (required): How to optimize the display:
+
** *Page*: Full-page authorization screen (default).
** *Popup*: Compact dialog optimized for web browser popup windows.
** *Touch*: Mobile-optimized dialog for smart phones, such as Android and iPhone.
+
* *Consumer key* (required): The consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
* *Consumer secret* (required): The consumer secret for the connector to access Salesforce.
* *Listener config* (required): Configuration for the listener, for example, `HTTP_Listener_config`.
* *Callback path* (required): Path for the callback, for example, `/callback`.
* *Authorize path* (required): Path for authorization, for example, `/authorize`.
* *External callback url*: Callback URL, for example, `+http://localhost:8085/callback+`.

== OAuth JWT

Important fields:

* *Consumer key* (required): The consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
* *Key store* (required): See <<Generate a Keystore File>>.
* *Store password* (required): The password for the keystore.
* *Principal* (required): The password for the keystore.

== OAuth SAML

Important fields:

* *Consumer key* (required): The consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
* *Key store* (required): See <<Generate a Keystore File>>.
* *Store password* (required): The password for the keystore.
* *Principal* (required) The password for the keystore.

== OAuth Username Password

Important fields:

* *Consumer key* (required): The consumer key for the Salesforce-connected app. See <<Create a Consumer Key>>.
* *Consumer secret* (required): The consumer secret for the connector to access Salesforce.
* *Username* (required): Enter the Salesforce username.
* *Password* (required): Enter the corresponding password.
* *Security token*: Enter the corresponding security token.

[[propvals]]
== Connector Property Values

The following are four example operations of the many you can set for the Salesforce connector.
These are the important fields for these example operations:

[%header%autowidth.spread]
|===
|Operation |Important Fields
|Create a|

* *Type*: Salesforce object type.
* *Records*: Function editor expression.
|Query a|

* *Salesforce query*: Salesforce query to retrieve objects.
* *Parameters*: Values for placeholders in the Salesforce query.
|Update a|

* *Type*:  Salesforce object type.
* *Records*: Function editor expression to produce a collection of Salesforce objects to be updated.

|Delete a|

* *Records To Delete IDs*: Function editor expression to produce a collection of Salesforce objects to be deleted.
|===

== Create a Consumer Key

A consumer key is required when setting up OAuth 2.0 configurations for the Salesforce connector. It is used by the OAuth JWT and SAML bearer configurations and by the OAuth Username Password configuration.

This procedure provides guidance on using Salesforce to create a consumer key, and explains how to create a connected app in Salesforce. However, the steps might differ somewhat in your Salesforce instance.

This procedure assumes that you already have a certification file (such as `salesforce-cert.crt`). If not, you can produce one by generating a Java KeyStore and Public Key.

[[create-consumer-key]]
. Log into Salesforce, and go to *Setup* > *Build* > *Create* > *Apps*.
. Under the Connected App section, click *New*.
. To create a new connected app, enter:
+
* A name for the connected app.
* The API name.
* Contact email.
+
. Under API (Enable OAuth Settings), select *Enable OAuth Settings*:
+
* Enter the *Callback URL*.
* Select the *Use Digital Signatures* checkbox.
* Click *Browse* (or *Choose File*), and load your Salesforce certificate (for example, `salesforce-cert.crt`), which contains your public key.
+
In Studio, you typically store this in the workspace that contains your Mule application.
+
. Add and Save these OAuth scopes to Selected OAuth Scopes:
+
*Full Access* (`full`) and *Perform Requests On Your Behalf At Any Time* (`refresh_token`, `offline_access`)
+
. Configure the Authorization Settings for the app.
. Click *Manage*. In the OAuth Policies section, expand the *Permitted Users* dropdown, and select *Admin Approved Users are Pre-Authorized*. Then click *Save*.
. Under the Profiles section, click *Manage Profiles*.
. Select your user profile and click *Save*.
. Go back to the list of Connected Apps: *Build* > *Create* > *Apps*.
. Under the Connected Apps section, select the connected app you created.

You can see the Consumer Key that you need to provide in your connector's configuration.

== Generate a Keystore File

The Keystore is the path to the keystore used to sign data during authentication. Only the Java keystore (JKS) format is allowed.

To generate a keystore file:

. Go to your Mule workspace and open the command prompt (for Windows) or Terminal (for Mac).
. Type this command and press enter:
+
[source]
----
keytool -genkeypair -alias salesforce-cert -keyalg RSA -keystore salesforce-cert.jks
----
+
. Enter the following:
+
** Password for the keystore.
** Your first name and last name.
** Your organization unit.
** Name of your city, state, and the two letters code of your country.
+
The system generates a Java keystore file containing a private or public key pair in your workspace.
The generated keystore file is in JKS format.
+
. Provide the file path for the keystore in your connector configuration.
+
Type this command and press enter:
+
[source]
----
keytool -exportcert -alias salesforce-cert -file salesforce-cert.crt -keystore salesforce-cert.jks
----
+
The system exports the public key from the keystore into the workspace. This is the public key that you need to enter in your Salesforce instance.
+
. Make sure that you have both the keystore (salesforce-cert.jks) and the public key (salesforce-cert.crt) files in your workspace.

== Use Mutual TLS

In v9.7.0 and later, all authentication types support Mutual TLS. To use this you need a keystore file in the JKS format, and a password for it. See <<Generate a Keystore File>> for more information.

Simply specify the path to the keystore file and the password in the configuration window (as shown in the image below) and any user that requires Mutual TLS authentication is able to login using the connector.

image::salesforce-mutual-tls.png[Mutual TLS]

To set up the Mutual TLS certificate in your Salesforce environment, see https://help.salesforce.com/articleView?id=security_keys_uploading_mutual_auth_cert.htm&type=5[Set Up a Mutual Authentication Certificate].

[[sessioninvalidation]]
== Keep Sessions Valid

For the Mule 4 Salesforce Connector, you have the option to keep the session valid until it expires by setting the *Disable session invalidation* field to `true` in the *Global Element Properties > Advanced* tab, or by setting `disableSessionInvalidation="true"` in the XML flow.

The Mule app controls the lifecycle connections. When the app determines that a given connection is not needed anymore, it checks the setting of *Disable session invalidation*. When the setting is `false` (default), the connector automatically destroys the connection for the session. To prevent a session from closing in this case, you can set the *Disable session invalidation* field to `true` or provide a function expression.

Salesforce uses the same session for all your threads, so for example, if your session is active and you log in again, Salesforce uses the existing session instead of creating a new one.

If the *Disable session invalidation* field is set to `false`, the connector automatically destroys the session after it's no longer needed.

You should keep the session alive when you are working with threads or concurrency in general. Salesforce uses the same session for all your threads (for example, if you have an active session and you log in again, Salesforce uses the existing session instead of creating a new one). To make sure the connection doesn't close when a thread is finished, you should set the *Disable session invalidation* field to `true` in the *Connection* section of the connector's global element properties.

image::salesforce-disable-session.png[Disable Session Field]

[[keepalive]]
== Keep Alive Feature (Deprecated in Salesforce 10.x)

To keep a session alive, you can set a scheduler to make one simple API request (get server timestamp), within a specified timeframe.
To activate this feature, you must configure the *Advanced reconnection params* in the Salesforce Config *General* tab, which include:

* Maintain session request frequency +
The default value is 60 seconds
* Initial delay +
The default value is 480 seconds

If no values are passed by the user, the default values are used.
These parameters are configurable because every Salesforce instance can specify a session timeout value, which can vary from 15 minutes to 24 hours.

=== Example

If the session timeout on the instance is set to 15 minutes and the application does not make any requests to Salesforce for 15 minutes or more, the session expires; and if the reconnection parameter is not enabled, subsequent API requests fail. 

In order to keep the session alive, you can configure the *Advanced reconnection params* like this:

.	Initial delay +
It is best to set this value at lower than 15, for example, 13 minutes. +
This value can also be set at a higher value than the session timeout value if it is known that the application will make requests to Salesforce and will not let the session expire, but it is best to set it for a lower value.
.	Maintain session request frequency +
Set this value to be between 8 and 15 minutes. +
This value can be lower than 8 minutes, but then it will consume more than one API request in 15 minutes. +
It is best to keep this value halfway between the session timeout value and request frequency.

You can use this feature to maintain a session's validity for up to 24 hours without triggering the reconnection.

[[apexsets]]
== Apex Settings

You can set Apex REST and SOAP access using Studio or in XML. When you connect to Salesforce, the Salesforce connector gets the names of the Apex classes and methods belonging to them that can be invoked.

All Salesforce connection configurations support these Apex settings:

* *Fetch All Apex SOAP Metadata*- Fetches the metadata of all the Apex SOAP classes. Takes precedence over Apex Class Name settings.
* *Fetch All Apex REST Metadata* - Fetches the metadata of all the all Apex REST classes. Takes precedence over Apex Class Name settings.
* *Apex Class Names* - List of Apex class names to use for limiting the set of classes you fetch along with the methods they expose. This setting can speed the fetch process if there are a lot of classes that you do not need to fetch.

You can provide Apex settings in Design Center and in Anypoint Studio 7.
See also xref:salesforce-connector-xml-maven.adoc#apexml[Apex XML Settings].

Click the *Apex* tab to choose the settings.

Apex settings values:

* *Fetch All Apex SOAP Metadata* - Fetches the metadata of all the Apex SOAP classes.
* *Fetch All Apex REST Metadata* - Fetches the metadata of all the all Apex REST classes.

Apex Class Names:

The *Expression*, *Edit inline*, or *Bean reference* choices provide these options:

* *None* - No Apex class name is mentioned for DataSense to acquire.
* *From a message* - Lets you specify the class name using an expression.
* *Create object manually* - You can create a list and add class names to the list - only those classes and their methods are acquired by DataSense.

[NOTE]
====
The *Fetch All Apex SOAP Metadata* and *Fetch All Apex REST Metadata* check boxes take precedence over the *Apex Class Names* setting. If these boxes are selected, they fetch all the Apex SOAP metadata or Apex REST metadata regardless of your selection in the Apex Class Names section.
====

== Next

After completing Studio set up, see xref:salesforce-connector-config-topics.adoc[Additional Configuration Information].

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
